src/objects/ints__TUCR_CreditSummary__c.object
<CustomObject>
    <fields>
        <fullName>ints__NumberOfCollections__c</fullName>
        <label>Number Of Collections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfHistoricalNegative__c</fullName>
        <label>Number Of Historical Negative</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfInquiries__c</fullName>
        <label>Number Of Inquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfInstallmentTrades__c</fullName>
        <label>Number Of Installment Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfMortgageTrades__c</fullName>
        <label>Number Of Mortgage Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfNegativeTradesHistorical__c</fullName>
        <label>Number Of Negative Trades Historical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfNegativeTrades__c</fullName>
        <label>Number Of Negative Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfOpenTrades__c</fullName>
        <label>Number Of Open Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfPublicRecords__c</fullName>
        <label>Number Of Public Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfRevolvingTrades__c</fullName>
        <label>Number Of Revolving Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfTrades__c</fullName>
        <label>Number Of Trades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__ReportingPeriod__c</fullName>
        <label>Reporting Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>TURC_Credit_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Credit Summary</label>
    <nameField>
        <displayFormat>TUCR_CRS-{000000000}</displayFormat>
        <label>TUCR Credit Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Credit Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>